syntax = "proto3";

package Superplane.Organizations;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/superplanehq/superplane/pkg/protos/organizations";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Superplane Organizations API";
    version: "1.0";
    description: "API for managing organizations in the Superplane service";
    contact: {
      name: "API Support";
      email: "support@superplane.com";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
};

service Organizations {
  rpc DescribeOrganization(DescribeOrganizationRequest) returns (DescribeOrganizationResponse) {
    option (google.api.http) = {
      get: "/api/v1/organizations/{id_or_name}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get organization details";
      description: "Returns the details of a specific organization (can be referenced by ID or name)";
      tags: "Organization";
    };
  }

  rpc UpdateOrganization(UpdateOrganizationRequest) returns (UpdateOrganizationResponse) {
    option (google.api.http) = {
      patch: "/api/v1/organizations/{id_or_name}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update an organization";
      description: "Updates the specified organization (can be referenced by ID or name)";
      tags: "Organization";
    };
  }

  rpc DeleteOrganization(DeleteOrganizationRequest) returns (DeleteOrganizationResponse) {
    option (google.api.http) = {
      delete: "/api/v1/organizations/{id_or_name}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete an organization";
      description: "Deletes the specified organization (can be referenced by ID or name)";
      tags: "Organization";
    };
  }

  rpc CreateInvitation(CreateInvitationRequest) returns (CreateInvitationResponse) {
    option (google.api.http) = {
      post: "/api/v1/organizations/{id_or_name}/invitations"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create an organization invitation";
      description: "Invites a user to join an organization by email";
      tags: "Organization";
    };
  }

  rpc ListInvitations(ListInvitationsRequest) returns (ListInvitationsResponse) {
    option (google.api.http) = {
      get: "/api/v1/organizations/{id_or_name}/invitations"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List organization invitations";
      description: "Returns pending invitations for an organization";
      tags: "Organization";
    };
  }

}

message Organization {
  message Metadata {
    string id = 1;
    string name = 2;
    string display_name = 3;
    string description = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
  }

  Metadata metadata = 1;
}

message ListOrganizationsRequest {}

message ListOrganizationsResponse {
  repeated Organization organizations = 1;
}

message CreateOrganizationRequest {
  Organization organization = 1;
}

message CreateOrganizationResponse {
  Organization organization = 1;
}

message DescribeOrganizationRequest {
  string id_or_name = 1;
}

message DescribeOrganizationResponse {
  Organization organization = 1;
}

message UpdateOrganizationRequest {
  Organization organization = 1;
  string id_or_name = 2;
}

message UpdateOrganizationResponse {
  Organization organization = 1;
}

message DeleteOrganizationRequest {
  string id_or_name = 1;
}

message DeleteOrganizationResponse {}

message Invitation {
  string id = 1;
  string organization_id = 2;
  string email = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateInvitationRequest {
  string id_or_name = 1;
  string email = 2;
}

message CreateInvitationResponse {
  Invitation invitation = 1;
}

message ListInvitationsRequest {
  string id_or_name = 1;
}

message ListInvitationsResponse {
  repeated Invitation invitations = 1;
}


// Event messages for organization lifecycle events
message OrganizationCreated {
  string organization_id = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message OrganizationUpdated {
  string organization_id = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message OrganizationDeleted {
  string organization_id = 1;
  google.protobuf.Timestamp timestamp = 2;
}